# stock_insights_assistant

./: .env.example  .gitignore  Dockerfile  README.md  data-engineer-home-task.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: routes.py
app/core/: models.py  orchestrator.py
app/services/: finnhub.py  openai_client.py
app/utils/: formatters.py
app/web/: index.html
tests/: test_finnhub.py  test_formatters.py  test_models.py  test_orchestrator.py
